# Me433_sp26

dev_hid_composite/: CMakeLists.txt  main.c  mpu6050.h  ssd1306.c  usb_descriptors.h
dev_hid_composite_old/: mpu6050.c  usb_descriptors.h
hw10/: game.py  pico_buttons.py
hw14/: CMakeLists.txt  circuit.HEIC  hw14.c  read_data.py
hw15/: parts.HEIC
hw17/: CMakeLists.txt  graphics.py
hw18_1/: CMakeLists.txt  arm-v2.stl  expected_graph.m  graph.py  holder (1).stl  hw18_1.c  setup!.HEIC  test.c  thimble-v1.stl
hw2/: code.py  hw2.c
hw3/: hw3.c
hw4/: CMakeLists.txt  hw4.c
hw5/: CMakeLists.txt  hw5.c
hw6/: CMakeLists.txt
hw6/dev_hid_composite/: CMakeLists.txt  main.c  mpu6050.c  mpu6050.h  usb_descriptors.h
hw7/: CMakeLists.txt  hw7.c
hw8/: hw8.c
hw9/: fft.py  fir.py  iir.py  maf.py  plot.py
